# check_github-workflow

./: .clang-format  CMakeLists.txt  README.md  check.sh
.github/workflows/: workflow.yml
scripts/: build.sh  configure_system.sh  install_dependencies.sh  run.sh
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_tcp_timeout.cpp
